tests/frontend/fail/array/create_arg_inconsistent_array_shape.act
contract B

contract A

constructor
interface constructor(int32[3][2] n2)


constructor
interface constructor()

creates
  A a := create A([[1,2,3],[4,5]])
